--- a/index.html
+++ b/index.html
@@ -1,58 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Enhanced 3D Solar System</title>
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Solar System with Meteor Predictions</title>
+    <style>
+        body { margin: 0; overflow: hidden; font-family: Arial, sans-serif; }
+        canvas { display: block; }
+
+        #controls-panel, #meteor-prediction-panel {
+            position: fixed;
+            top: 20px;
+            background: rgba(0, 0, 0, 0.8);
+            padding: 15px;
+            color: white;
+            border-radius: 8px;
+            z-index: 100;
+        }
+
+        #controls-panel { left: 20px; }
+        #meteor-prediction-panel { right: 20px; }
+    </style>
 </head>
 <body>
-  <div id="container">
-    <canvas id="solar-system"></canvas>
-  </div>
-  <div id="controls">
-    <label for="time-scale">Time Scale: </label>
-    <input type="range" id="time-scale" min="0.1" max="5" step="0.1" value="1">
-    <select id="planet-selector">
-      <option value="">Select a Planet</option>
-    </select>
-  </div>
-  <div id="info-panel" class="hidden">
-    <h2 id="planet-name"></h2>
-    <p id="planet-details"></p>
-    <button id="close-info">Close</button>
-  </div>
-  <script src="https://cdn.jsdelivr.net/npm/three@0.140.0/build/three.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/three@0.140.0/examples/js/controls/OrbitControls.js"></script>
-  <script src="script.js"></script>
-</body><div id="controls">
-  <!-- Existing controls -->
-  <label for="time-scale">Time Scale:</label>
-  <input type="range" id="time-scale" min="0.1" max="5" step="0.1" value="1">
 
-  <label for="planet-selector">Select Planet:</label>
-  <select id="planet-selector">
-      <option value="">Select a Planet</option>
-      <!-- Existing planet options -->
-  </select>
+    <div id="controls-panel">
+        <div>
+            <label for="time-scale">Speed:</label>
+            <input type="range" id="time-scale" min="0.1" max="5" step="0.1" value="1">
+        </div>
+        <div>
+            <label for="planet-selector">Planet:</label>
+            <select id="planet-selector">
+                <option value="">Overview</option>
+            </select>
+        </div>
+        <div>
+            <label for="month-selector">Month:</label>
+            <select id="month-selector">
+                <option value="">Select month</option>
+                <option value="1">January</option>
+                <option value="2">February</option>
+                <option value="3">March</option>
+                <option value="4">April</option>
+                <option value="5">May</option>
+                <option value="6">June</option>
+                <option value="7">July</option>
+                <option value="8">August</option>
+                <option value="9">September</option>
+                <option value="10">October</option>
+                <option value="11">November</option>
+                <option value="12">December</option>
+            </select>
+        </div>
+    </div>
 
-  <!-- Add new month selector -->
-  <label for="month-selector">Select Month:</label>
-  <select id="month-selector">
-      <option value="">Select a Month</option>
-      <option value="1">January</option>
-      <option value="2">February</option>
-      <option value="3">March</option>
-      <option value="4">April</option>
-      <option value="5">May</option>
-      <option value="6">June</option>
-      <option value="7">July</option>
-      <option value="8">August</option>
-      <option value="9">September</option>
-      <option value="10">October</option>
-      <option value="11">November</option>
-      <option value="12">December</option>
-  </select>
-</div>
+    <div id="meteor-prediction-panel">
+        <h2>Meteor Predictions</h2>
+        <div id="meteor-predictions">Select a month to view predictions.</div>
+    </div>
+    
+    <!-- Load GSAP and Three.js from CDN -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
 
+    <script type="importmap">
+    {
+        "imports": {
+            "three": "https://unpkg.com/three@0.156.1/build/three.module.js",
+            "three/addons/": "https://unpkg.com/three@0.156.1/examples/jsm/"
+        }
+    }
+    </script>
+
+    <script type="module" src="script.js"></script>
+
+</body>
 </html>
+
